--- a/src/main/resources/templates/batch/addBatch.html
+++ b/src/main/resources/templates/batch/addBatch.html
@@ -76,7 +76,7 @@
         <select id="teacher" class="form-control" data-th-field="*{teacher}" required >
           <option value="" >Select the Teacher</option >
           <option data-th-each="teacher : ${teachers}"
-                  data-th-text="${teacher.firstName}"
+                  data-th-text="${teacher.firstName+'_'+teacher.fee}"
                   data-th-value="${teacher.id}" ></option >
         </select >
       </div >
