--- a/src/main/resources/templates/timeTable/addTimeTable.html
+++ b/src/main/resources/templates/timeTable/addTimeTable.html
@@ -1,145 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <!--Styles, meta data, and title are included-->
-<head data-th-replace="~{fragments/header :: headerFragment}">
-    <meta charset="UTF-8">
-    <title>Success TimeTable Management</title>
-</head>
-<body>
+<head data-th-replace="~{fragments/header :: headerFragment}" >
+  <meta charset="UTF-8" >
+  <title >Success TimeTable Management</title >
+</head >
+<body >
 <!--Nav bar is included-->
-<nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
+<nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
-<div class="row bg-secondary">
-    <div class="col-4">
-    </div>
-    <div class="col-4">
-        <h1>TimeTable Management - Add New TimeTable</h1>
-    </div>
-    <div class="col-4">
-        <a href="/timeTable">
-            <button class="btn btn-primary">View All On Time Table</button>
-        </a>
-    </div>
-</div>
-<div class="container-fluid">
-    <form action="/timeTable/save" data-th-object="${timeTable}" method="post">
-        <!--timeTable id-->
-        <div class="form-row text-right" data-th-if="${addStatus==false}">
-            <div class="col-md-4">
-                <label data-th-for="${id}">Id</label>
-            </div>
-            <div class="col-md-8">
-                <input class="form-control" data-th-field="*{id}" readonly type="text">
-                <input class="form-control" data-th-field="*{liveDead}" readonly type="hidden">
-            </div>
-        </div>
-        <!--Slot ID-->
-        <div class="form-row text-right" data-th-if="${addStatus==false}">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${code}">Slot Code :</label>
-            </div>
-            <div class="col-md-8">
-                <input class="form-control" data-th-field="*{code}" required tabindex="4" type="text"/>
-                <span data-th-errors="*{code}"
-                      data-th-if="${#fields.hasErrors('code')}">Error Name</span>
-            </div>
-        </div>
-        <!--startAt-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${startAt}">Start At :</label>
-            </div>
-            <div class="col-md-8">
-                <input class="form-control" data-th-field="*{startAt}" required tabindex="4" type="datetime-local"/>
-                <span data-th-errors="*{startAt}"
-                      data-th-if="${#fields.hasErrors('startAt')}">Error Name</span>
-            </div>
-        </div>
-        <!--endAt-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${endAt}">End At :</label>
-            </div>
-            <div class="col-md-8">
-                <input class="form-control" data-th-field="*{endAt}" required tabindex="4" type="datetime-local"/>
-                <span data-th-errors="*{time}"
-                      data-th-if="${#fields.hasErrors('endAt')}">Error Name</span>
-            </div>
-        </div>
-        <!--Teacher-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${teacher}">Teacher :</label>
-            </div>
-            <div class="col-md-8">
-                <select class="form-control" data-th-field="*{teacher}" required  >
-                    <option value="" >Please Select</option >
-                    <option data-th-each="teacher : ${teachers}"
-                    data-th-value="${teacher.id}"
-                    data-th-text="${teacher.name}"></option >
-                </select >
-                <span data-th-errors="*{teacher}"
-                      data-th-if="${#fields.hasErrors('teacher')}">Error Name</span>
-            </div>
-        </div>
-        <!--Subject-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${teacher}">Teacher :</label>
-            </div>
-            <div class="col-md-8">
-                <select class="form-control"  required  >
-                    <option value="" >Please Select</option >
-                    <option data-th-each="subject : ${subjects}"
-                            data-th-value="${subject.id}"
-                            data-th-text="${subject.name}"></option >
-                </select >
-                <span data-th-errors="*{teacher}"
-                      data-th-if="${#fields.hasErrors('teacher')}">Error Name</span>
-            </div>
-        </div>
-        <!--batch-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${teacher}">Batch :</label>
-            </div>
-            <div class="col-md-8">
-                <select class="form-control" data-th-field="*{batch}" required  >
-                    <option value="" >Please Select</option >
-                    <option data-th-each="batch : ${batches}"
-                            data-th-value="${batch.id}"
-                            data-th-text="${batch.name}"></option >
-                </select >
-                <span data-th-errors="*{teacher}"
-                      data-th-if="${#fields.hasErrors('teacher')}">Error Name</span>
-            </div>
-        </div>
-        <!--Hall Number-->
-        <div class="form-row text-right">
-            <div class="col-md-4">
-                <label class="control-label" data-th-for="${hall}">Hall :</label>
-            </div>
-            <div class="col-md-8">
-                <input class="form-control" data-th-field="*{hall}" required tabindex="4" type="text"/>
-                <span data-th-errors="*{hall}"
-                      data-th-if="${#fields.hasErrors('hall')}">Error Name</span>
-            </div>
-        </div>
+<div class="row bg-secondary" >
+  <div class="col-4" >
+  </div >
+  <div class="col-4" >
+    <h1 >TimeTable Management - Add New TimeTable</h1 >
+  </div >
+  <div class="col-4" >
+    <a href="/timeTable" >
+      <button class="btn btn-primary" >View All On Time Table</button >
+    </a >
+  </div >
+</div >
+<div class="container-fluid" >
+  <form action="/timeTable/save" data-th-object="${timeTable}" method="post" >
 
-        <!--Button-->
-        <div class="form-batch col-md-12 col-sm-12 text-center flex-column ">
-            <button class="btn btn-success" tabindex="21" type="submit">
-                <i class="fa fa-save " style="font-size: 20px"></i>&nbsp; &nbsp;<span
-                    data-th-text="${addStatus==true?'Save': 'Update'}"
-                    id="submit"></span>
-            </button>
-        </div>
-    </form>
-</div>
+    <div class="container-fluid" >
+      <table class="table table-responsive" >
+        <tr >
+          <th data-th-if="${!addStatus}" >Index</th >
+          <th data-th-if="${addStatus}" >Code</th >
+          <th >Batch Name</th >
+          <th >Lesson</th >
+          <th >Start At</th >
+          <th >End At</th >
+          <th >Hall</th >
+        </tr >
+        <tr data-th-each="batch, index : ${batches}" >
+          <th data-th-if="${!addStatus}" data-th-text="${index.count}" ></th >
+          <th data-th-if="${addStatus}" >
+            <input type="text" class="form-control" data-th-name="${timeTables[__${index}__].code}" required readonly >
+          </th >
+          <th >
+            <input type="text" class="form-control"
+                   data-th-value="${addStatus?'timeTables[__${index}__].batch.name':'batch.name'}" required readonly >
+            <input type="text" class="form-control" data-th-name="${timeTables[__${index}__].batch.id}"
+                   data-th-value="${batch.id}" required readonly >
+          </th >
+          <th >
+            <input type="text" class="form-control" data-th-name="${timeTables[__${index}__].lesson}"
+                   data-th-value="${timeTables[__${index}__].lesson}" required >
+          </th >
+          <th >
+            <input type="datetime-local" class="form-control startAt" data-th-name="${timeTables[__${index}__].startAt}"
+                   data-th-value="${timeTables[__${index}__].startAt}" required >
+          </th >
+          <th >
+            <input type="datetime-local" class="form-control endAt" data-th-name="${timeTables[__${index}__].endAt}"
+                   data-th-value="${timeTables[__${index}__].endAt}" required >
+          </th >
+          <th >
+            <select data-th-name="${timeTables[__${index}__].hall.id}"
+                    data-th-value="${timeTables[__${index}__].hall.id}" id="" required >
+              <option value="" >Please select</option >
+              <option data-th-each="hall : ${halls}"
+                      data-th-value="${hall.id}"
+                      data-th-utext="${hall.name}" ></option >
+            </select >
+          </th >
+        </tr >
+      </table >
+    </div >
+
+
+    <!--Button-->
+    <div class="form-batch col-md-12 col-sm-12 text-center flex-column " >
+      <button class="btn btn-success" tabindex="21" type="submit" >
+        <i class="fa fa-save " style="font-size: 20px" ></i >&nbsp; &nbsp;<span
+            data-th-text="${addStatus==true?'Save': 'Update'}"
+            id="submit" ></span >
+      </button >
+    </div >
+  </form >
+</div >
 
 <!--footer is included-->
-<div data-th-replace="~{fragments/footer :: footerFragment}"></div>
+<div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
 <!--script is included-->
-<div data-th-replace="~{fragments/script :: scriptFragment}"></div>
-</body>
-</html>
+<div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
+</body >
+</html >
