--- a/src/main/resources/templates/timeTable/addTimeTable.html
+++ b/src/main/resources/templates/timeTable/addTimeTable.html
@@ -22,7 +22,7 @@
   </div >
 </div >
 <div class="container-fluid" >
-  <form action="/timeTable/save" data-th-object="${timeTable}" method="post" >
+  <form action="/timeTable/save" data-th-object="${batch}" method="post" >
 
     <div class="container-fluid" >
       <table class="table table-responsive" id="timeTable" >
@@ -35,7 +35,7 @@
           <th >Start At</th >
           <th >End At</th >
           <th >Hall</th >
-          <th data-th-if="${!addStatus}">Modify</th>
+          <th data-th-if="${!addStatus}" >Modify</th >
         </tr >
         <tr data-th-each="batch, index : ${batches}" >
           <th data-th-if="${!addStatus}" data-th-text="${index.count}" ></th >
@@ -81,7 +81,7 @@
                       data-th-text="${'Name : '+hall.name+' Seats : '+ hall.seatCount}" ></option >
             </select >
           </th >
-          <th data-th-if="${!addStatus}">
+          <th data-th-if="${!addStatus}" >
             <div class="col" >
               <div class="custom-control custom-checkbox custom-control-inline "
                    data-th-each="liveDead : ${liveDeads}" >
@@ -96,7 +96,7 @@
                 </label >
               </div >
             </div >
-          </th>
+          </th >
         </tr >
       </table >
     </div >
@@ -180,10 +180,10 @@
                             }
                             console.log(timeTableSlots)
                         } else {
-                            $(`#sAt${selectedFiledId}, #eAt${selectedFiledId}`).addClass('bg-success').removeClass('bg-danger bg-white');
+                            $(`#sAt${selectedFiledId}, #eAt${selectedFiledId}, #hAt${selectedFiledId}`).addClass('bg-success').removeClass('bg-danger bg-white');
                         }
                     } else {
-                        $(`#sAt${selectedFiledId}, #eAt${selectedFiledId}`).addClass('bg-white').removeClass('bg-success bg-danger');
+                        $(`#sAt${selectedFiledId}, #eAt${selectedFiledId}, #hAt${selectedFiledId}`).addClass('bg-white').removeClass('bg-success bg-danger');
                     }
                 }
             )
