home page designed.but data links not updated...front end part done.nav menu to be complete

--- a/src/main/resources/templates/mainWindow.html
+++ b/src/main/resources/templates/mainWindow.html
@@ -9,7 +9,71 @@
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<h1>I am Mainwindow</h1>
+<h1 align="center" class="display-3 text-danger"><strong>Welcome to Success Student Management System</strong></h1>
+
+<!-- Four equal columns -->
+<div class="row">
+    <div class="jumbotron col-3" >
+        <h2>Student Management</h2><br>
+        <i class="fas fa-book-reader" style="font-size:36px"></i><br><br>
+        <button type="button" class="btn btn-outline-primary">Registration</button>
+        <button type="button" class="btn btn-outline-warning">Update Details</button>
+        <button type="button" class="btn btn-outline-success">View All</button>
+    </div>
+    <div class="jumbotron col-3 bg-light" >
+        <h2>Teacher Management</h2><br>
+        <i class="fas fa-chalkboard-teacher" style="font-size:36px"></i><br><br>
+        <button type="button" class="btn btn-outline-primary">Registration</button>
+        <button type="button" class="btn btn-outline-warning">Update Details</button>
+        <button type="button" class="btn btn-outline-success">View All</button>
+    </div>
+    <div class="jumbotron col-3" >
+        <h2>Class Management</h2><br>
+        <i class="fas fa-school" style="font-size:36px"></i><br><br>
+        <button type="button" class="btn btn-outline-primary">Add new Class</button>
+        <button type="button" class="btn btn-outline-warning">Update Details</button>
+        <button type="button" class="btn btn-outline-success">View All</button>
+    </div>
+    <div class="jumbotron col-3 bg-light" >
+        <h2>Payment Management</h2><br>
+        <i class="fab fa-amazon-pay" style="font-size:36px"></i><br><br>
+        <button type="button" class="btn btn-outline-primary">Make a Payment</button>
+        <button type="button" class="btn btn-outline-warning">Transaction modify</button>
+        <button type="button" class="btn btn-outline-success">View All</button>
+    </div>
+</div>
+<div class="row">
+    <div class="jumbotron  col-3 bg-light" >
+        <h2>Shedule Management</h2><br>
+        <i class="far fa-clock" style="font-size:36px"></i><br><br>
+        <button type="button" class="btn btn-outline-primary">Create Session</button>
+        <button type="button" class="btn btn-outline-warning">Update Details</button>
+        <button type="button" class="btn btn-outline-success">View time Table</button>
+    </div>
+    <div class="jumbotron jumbotron col-3" >
+        <h2>Hall Management</h2><br>
+        <i class="fas fa-hotel" style="font-size:36px"></i><br><br>
+        <button type="button" class="btn btn-outline-primary">Add new</button>
+        <button type="button" class="btn btn-outline-warning">Update Details</button>
+        <button type="button" class="btn btn-outline-success">View All</button>
+    </div>
+    <div class="jumbotron col-3  bg-light" >
+        <h2>Subject Management</h2><br>
+        <i class="far fa-folder-open" style="font-size:36px"></i><br><br>
+        <button type="button" class="btn btn-outline-primary">Add new</button>
+        <button type="button" class="btn btn-outline-warning">Update Details</button>
+        <button type="button" class="btn btn-outline-success">View All</button>
+    </div>
+    <div class="jumbotron col-3" >
+        <h2>Staff Management</h2><br>
+        <i class="far fa-address-card" style="font-size:36px"></i><br><br>
+        <button type="button" class="btn btn-outline-primary">Registration</button>
+        <button type="button" class="btn btn-outline-warning">Update Details</button>
+        <button type="button" class="btn btn-outline-success">View All</button>
+    </div>
+</div>
+
+
 <!--footer is included-->
 <div data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script is included-->
